--- a/domain.yml
+++ b/domain.yml
@@ -8,6 +8,7 @@ intents:
   - goodbye
   - look
   - pickup
+  - use
   - inventory
   - question_answer
   - help
@@ -43,16 +44,19 @@ responses:
     - text: "Bye, Sorry to see you go."
 
   utter_iamabot:
-    - text: "I am a bot made by OVGU Team."
+    - text: "I am a ETHAN HUNT made by OVGU Team."
+
+  utter_okaytext:
+    - text: "Could You please specify what you are looking at?"
 
   utter_help:
-    - text:        "This is a text based adventure game. You're able to pick up items and you're
+    - text: "This is a text based adventure game. You're able to pick up items and you're
         also able to combine them in order to solve puzzles. You can try to `look` and
         items, you might be able to `pick up` items and you can try to `use` items on
         other objects. Before you're able to combine items you first need to pick them
         up. If you get stuck, feel free to ask for a hint!"
   utter_hint:
-    - text: "Try looking at the window or cardbox box."
+    - text: "Try looking at the objects around you in the starting of each level."
 
 slots:
   torch:
@@ -82,18 +86,20 @@ slots:
 
 actions:
   - action_look
+  - action_pickup
   - action_check_answer
   - utter_greet
   - utter_game_intro
   - utter_level_1
   - utter_level_2
   - utter_level_3
-  - action_pickup
   - action_inventory
   - utter_goodbye
   - utter_iamabot
   - utter_help
   - utter_hint
+  - action_use
+  - utter_okaytext
 
 session_config:
   session_expiration_time: 60
