--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -67,6 +67,8 @@ nlu:
 
   - intent: look
     examples: |
+      - look around
+      - look around me
       - look at the [tree](object)
       - look at [tree](object)
       - i want to look at the [tree](object)
@@ -251,6 +253,114 @@ nlu:
       - walk to the [shells](object)
       - go to the [shells](object)
       - look at the [shells](object)
+      - look at [waterfall](object)
+      - i want to look at the [waterfall](object)
+      - check the [waterfall](object)
+      - peek at [waterfall](object)
+      - watch the [waterfall](object)
+      - glance at the [waterfall](object)
+      - walk to the [waterfall](object)
+      - go to the [waterfall](object)
+      - look at the [waterfall](object)
+      - look at [plants](object)
+      - i want to look at the [plants](object)
+      - check the [plants](object)
+      - peek at [plants](object)
+      - watch the [plants](object)
+      - glance at the [plants](object)
+      - walk to the [plants](object)
+      - go to the [plants](object)
+      - look at the [plants](object)
+      - look at [plant](object)
+      - i want to look at the [plant](object)
+      - check the [plant](object)
+      - peek at [plant](object)
+      - watch the [plant](object)
+      - glance at the [plant](object)
+      - walk to the [plant](object)
+      - go to the [plant](object)
+      - look at the [plant](object)
+      - look at [passage](object)
+      - i want to look at the [passage](object)
+      - check the [passage](object)
+      - peek at [passage](object)
+      - watch the [passage](object)
+      - glance at the [passage](object)
+      - walk to the [passage](object)
+      - go to the [passage](object)
+      - look at the [passage](object)
+      - look at [flower](object)
+      - i want to look at the [flower](object)
+      - check the [flower](object)
+      - peek at [flower](object)
+      - watch the [flower](object)
+      - glance at the [flower](object)
+      - walk to the [flower](object)
+      - go to the [flower](object)
+      - look at the [flower](object)
+      - look at [flowers](object)
+      - i want to look at the [flowers](object)
+      - check the [flowers](object)
+      - peek at [flowers](object)
+      - watch the [flowers](object)
+      - glance at the [flowers](object)
+      - walk to the [flowers](object)
+      - go to the [flowers](object)
+      - look at the [flowers](object)
+      - look at [rainbow](object)
+      - i want to look at the [rainbow](object)
+      - check the [rainbow](object)
+      - peek at [rainbow](object)
+      - watch the [rainbow](object)
+      - glance at the [rainbow](object)
+      - walk to the [rainbow](object)
+      - go to the [rainbow](object)
+      - look at the [rainbow](object)
+      - look at [stone](object)
+      - i want to look at the [stone](object)
+      - check the [stone](object)
+      - peek at [stone](object)
+      - watch the [stone](object)
+      - glance at the [stone](object)
+      - walk to the [stone](object)
+      - go to the [stone](object)
+      - look at the [stone](object)
+      - look at [skull](object)
+      - i want to look at the [skull](object)
+      - check the [skull](object)
+      - peek at [skull](object)
+      - watch the [skull](object)
+      - glance at the [skull](object)
+      - walk to the [skull](object)
+      - go to the [skull](object)
+      - look at the [skull](object)
+      - look at [bat](object)
+      - i want to look at the [bat](object)
+      - check the [bat](object)
+      - peek at [bat](object)
+      - watch the [bat](object)
+      - glance at the [bat](object)
+      - walk to the [bat](object)
+      - go to the [bat](object)
+      - look at the [bat](object)
+      - look at [inscription](object)
+      - i want to look at the [inscription](object)
+      - check the [inscription](object)
+      - peek at [inscription](object)
+      - watch the [inscription](object)
+      - glance at the [inscription](object)
+      - walk to the [inscription](object)
+      - go to the [inscription](object)
+      - look at the [inscription](object)
+      - look at [mace](object)
+      - i want to look at the [mace](object)
+      - check the [mace](object)
+      - peek at [mace](object)
+      - watch the [mace](object)
+      - glance at the [mace](object)
+      - walk to the [mace](object)
+      - go to the [mace](object)
+      - look at the [mace](object)
       - [tree](object)
       - [trees](object)
       - [forest](object)
@@ -269,6 +379,18 @@ nlu:
       - [sand](object)
       - [shell](object)
       - [shells](object)
+      - [waterfall](object)
+      - [plant](object)
+      - [plants](object)
+      - [flower](object)
+      - [flowers](object)
+      - [hidden passage](object)
+      - [rainbow](object)
+      - [mace](object)
+      - [inscription](object)
+      - [bat](object)
+      - [skull](object)
+      - [stone](object)
 
   - intent: pickup
     examples: |
@@ -307,20 +429,38 @@ nlu:
       - snag the [rope](object)
       - grab the [rope](object)
       - seize the [rope](object)
-      - pick up the [sword](object)
-      - pick the [sword](object)
-      - select [sword](object)
-      - select the [sword](object)
-      - take [sword](object)
-      - take the [sword](object)
-      - collect up the [sword](object)
-      - take up the [sword](object)
-      - snag the [sword](object)
-      - grab the [sword](object)
-      - seize the [sword](object)
+      - pick up the [scepter](object)
+      - select [scepter](object)
+      - select the [scepter](object)
+      - take [scepter](object)
+      - take the [scepter](object)
+      - pick [scepter](object)
+      - pick the [scepter](object)
+      - collect up the [scepter](object)
+      - take up the [scepter](object)
+      - snag the [scepter](object)
+      - grab the [scepter](object)
+      - seize the [scepter](object)
+      - pick up the [mace](object)
+      - select [mace](object)
+      - select the [mace](object)
+      - take [mace](object)
+      - take the [mace](object)
+      - pick [mace](object)
+      - pick the [mace](object)
+      - collect up the [mace](object)
+      - take up the [mace](object)
+      - snag the [mace](object)
+      - grab the [mace](object)
+      - seize the [mace](object)
+      - lift the [mace](object)
+      - lift [mace](object)
       - [key](object)
       - [torch](object)
       - [rope](object)
+      - [scepter](object)
+      - [butterfly scepter](object)
+      - [mace](object)
 
   - intent: use
     examples: |
@@ -336,17 +476,24 @@ nlu:
       - lets open the [torch](object)
       - open the [rope](object)
       - lets open the [rope](object)
-      - open the [sword](object)
-      - lets open the [sword](object)
-      - apply the [sword](object)
-      - lets apply the [sword](object)
+      - open the [scepter](object)
+      - lets open the [scepter](object)
+      - open the [stone](object)
+      - lets open the [stone](object)
+      - apply the [scepter](object)
+      - lets apply the [scepter](object)
       - combine the [torch](object) with the [tree](object)
       - combine the [rope](object) with the [rock](object)
       - combine the [key](object) with the [sand](object)
+      - combine the [scepter](object) with the [rainbow](object)
+      - combine the [mace](object) with the [inscription](object)
       - combine the [torch](object) with the [cave](object)
       - combine the [rope](object) with the [chockstone](object)
       - combine the [key](object) with the [bridge](object)
       - combine the [key](object) with the [locked bridge](object)
+      - combine the [scepter](object) with the [waterfall](object)
+      - combine the [scepter](object) with the [passage](object)
+      - combine the [mace](object) with the [stone](object)
       - use the [torch](object) on the [cave](object)
       - use the [rope](object) on the [rock](object)
       - use the [key](object) on the [bridge](object)
@@ -354,6 +501,11 @@ nlu:
       - use the [torch](object) with the [tree](object)
       - use the [rope](object) with the [mountain](object)
       - use the [key](object) with the [sand](object)
+      - use the [scepter](object) with the [waterfall](object)
+      - use the [scepter](object) with the [passage](object)
+      - use the [scepter](object) with the [rainbow](object)
+      - use the [mace](object) with the [stone](object)
+      - use the [mace](object) with the [inscription](object)
       - use [torch](object) on [cave](object)
       - use [rope](object) on [chockstone](object)
       - use [key](object) on [bridge](object)
@@ -361,15 +513,26 @@ nlu:
       - use [torch](object) on [tree](object)
       - use [rope](object) on [rock](object)
       - use [key](object) on [sand](object)
+      - use [scepter](object) on [waterfall](object)
+      - use [scepter](object) on [hidden passage](object)
+      - use [scepter](object) on [rainbow](object)
+      - use [mace](object) on [stone](object)
+      - use [mace](object) on [inscription](object)
       - unite the [torch](object) with the [cave](object)
       - unite the [rope](object) with the [chockstone](object)
       - unite the [key](object) with the [bridge](object)
       - unite the [key](object) with the [locked bridge](object)
+      - unite the [scepter](object) with the [waterfall](object)
+      - unite the [scepter](object) with the [passage](object)
+      - unite the [mace](object) with the [stone](object)
       - open the [bridge](object) with the [key](object)
       - open the [key](object) with the [locked bridge](object)
+      - open the [stone](object) with the [mace](objec
       - unite the [torch](object) with the [tree](object)
       - unite the [rope](object) with the [rock](object)
       - unite the [key](object) with the [sand](object)
+      - unite the [mace](object) with the [inscription](object)
+      - unite the [scepter](object) with the [rainbow](object)
       - use the [torch](object) on the [cave](object)
       - use the [cave](object)
       - open the [cave](object)
@@ -380,11 +543,24 @@ nlu:
       - mix [tree](object) with the [torch](object)
       - mix [rock](object) with the [rope](object)
       - mix [key](object) with the [sand](object)
+      - mix [scepter](object) with the [waterfall](object)
+      - mix [scepter](object) with the [passage](object)
+      - mix [scepter](object) with the [rainbow](object)
+      - mix [mace](object) with the [stone](object)
+      - mix [mace](object) with the [inscription](object)
       - use the [torch](object) on the [cave](object)
       - throw the [rope](object) on the [mountain](object)
       - throw the [rope](object) on the [mountains](object)
       - turnon the [torch](object) in the [cave](object)
       - switch on the [torch](object) in the [cave](object)
+      - insert [mace](object) into the [stone](object)
+      - insert [mace](object) into [stone](object)
+      - keep [mace](object) into the [stone](object)
+      - keep [mace](object) into [stone](object)
+      - put [mace](object) into the [stone](object)
+      - put [mace](object) into [stone](object)
+      
+
   - intent: inventory
     examples: |
       - show inventory
@@ -415,7 +591,14 @@ nlu:
       - Dewdrop
       - Foam
       - Waves
-
+      - Lion
+      - Butterfly
+      - Snake
+      - Spider
+      - Shadow
+      - Moon
+      - Night
+      - Silence
 
   - intent: help
     examples: |
@@ -469,4 +652,17 @@ nlu:
       - key
       - torch
       - rope
-      - sword
+      - waterfall
+      - plant
+      - plants
+      - flower
+      - flowers
+      - rainbow
+      - passage
+      - scepter
+      - mace
+      - stone
+      - skull
+      - bat
+      - inscription
+
