--- a/domain.yml
+++ b/domain.yml
@@ -20,43 +20,55 @@ entities:
 
 responses:
   utter_greet:
-    - text: " Hey  Welcome to the Mystical Forest breakout adventure game. Would You like to play it "
+    - text: " Hey  Welcome to the Mystical Forest breakout adventure game. Would You like to play it❔ "
 
   utter_game_intro:
     - text: "Once, I was in a plane crash just like you, and I felt really happy when I survived from the crash.
-        But there was a big problem waiting for you in this dense forest. To make it out alive,
-        you have to solve three tricky puzzles at different levels. Don't worry though,
-        I'm ETHAN HUNT, and I'll be there to help you and explain everything as we go along. W
-        e'll work together to solve the mysteries of the forest and overcome the challenges.
-        Trust me, we'll beat the odds and enjoy this exciting adventure that fate has given us.
-        Do you want to continue the adventure?"
+             But there was a big problem waiting for you in this dense forest. To make it out alive,
+            you have to solve three tricky puzzles at different levels. Don't worry though,
+            I'm ETHAN HUNT, and I'll be there to help you and explain everything as we go along. W
+            e'll work together to solve the mysteries of the forest and overcome the challenges.
+            Trust me, we'll beat the odds and enjoy this exciting adventure that fate has given us.
+            Do you want to continue the adventure❔"
 
   utter_level_1:
-    - text: " ETHAN -  Let's start level 1 of mystic forest. In front you there are  burrow, cave, and a tree. Have look at them."
+    - text: " Let's start level 1 of mystic forest.
+              In front you there are  burrow 🐰🕳⛳, cave🗿🗿, and a tree🌳🌴.
+              Have look at them🔍."
 
   utter_level_2:
-    - text: " ETHAN - Let's start level 2 of mystic forest. You see a mountain surrounded by rock, and chockstone. Have look at them."
+    - text: "  Let's start level 2 of mystic forest.
+              You see a mountain surrounded by rock🪨, and chockstone 🪨.
+              Have look at them🔍."
 
   utter_level_3:
-    - text: "ETHAN - Let's start level 3 of mystic forest. You see a river, bridge, sand and shell. Have look at them."
+    - text: " Let's start level 3 of mystic forest.
+             You see a river🌊🌊, bridge, sand⏳ and shell🐚🐚.
+             Have look at them🔍."
+
+  utter_level_4:
+    - text: " Let's start level 4 of mystic forest.
+             You see a waterfall🌊🌊, rainbow, plants and flowers.
+             Have look at them🔍."
 
   utter_goodbye:
-    - text: "Bye, Sorry to see you go."
+    - text: "Bye, Sorry to see you go 😓💔."
 
   utter_iamabot:
-    - text: "I am a ETHAN HUNT made by OVGU Team."
+    - text: "I am a chatbot made by OVGU Team 🎓."
 
   utter_okaytext:
-    - text: "Could You please specify what you are looking at?"
+    - text: "Could You please specify what you are looking at🔍?"
 
   utter_help:
-    - text: "This is a text based adventure game. You're able to pick up items and you're
-        also able to combine them in order to solve puzzles. You can try to `look` and
-        items, you might be able to `pick up` items and you can try to `use` items on
+    - text: "  This is a text based adventure game. You're able to pick up items and you're
+        also able to combine them in order to solve puzzles. You can try to `look` 🔍 and
+        items, you might be able to `pick up` 🫳 items and you can try to `use` items on
         other objects. Before you're able to combine items you first need to pick them
         up. If you get stuck, feel free to ask for a hint!"
+
   utter_hint:
-    - text: "Try looking at the objects around you in the starting of each level."
+    - text: " Try looking at the objects around you in the starting of each level."
 
 slots:
   torch:
@@ -77,7 +89,13 @@ slots:
       - type: custom
     initial_value: false
     influence_conversation: true
-  sword:
+  scepter:
+    type: bool
+    mappings:
+      - type: custom
+    initial_value: false
+    influence_conversation: true
+  mace:
     type: bool
     mappings:
       - type: custom
@@ -100,6 +118,8 @@ actions:
   - utter_hint
   - action_use
   - utter_okaytext
+  - utter_level_4
+
 
 session_config:
   session_expiration_time: 60
